--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "ts-node-dev src/index.ts",
+    "start": "node dist/index.js",
+    "postinstall": "tsc"
   },
   "author": "Bruno Jacobs",
   "license": "MIT",
@@ -17,5 +19,8 @@
   },
   "devDependencies": {
     "ts-node-dev": "^1.1.1"
+  },
+  "engines": {
+    "node": "12.18.3"
   }
 }
