--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev src/index.ts",
     "start": "node dist/index.js",
-    "postinstall": "tsc"
+    "tsc": "tsc",
+    "postinstall": "npm run tsc"
   },
   "author": "Bruno Jacobs",
   "license": "MIT",
@@ -15,7 +16,8 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "ts-node-dev": "^1.1.1"
