--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev src/index.ts",
     "start": "node dist/index.js",
-    "tsc": "tsc",
+    "tsc": "tsc && mv -i -v build/ && rm -v -rf src",
     "postinstall": "npm run tsc"
   },
   "author": "Bruno Jacobs",
